--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <example-app.version>1.0.0</example-app.version>
-        <example-app.user>1.0.0</example-app.user>
-        <example-app.group>1.0.0</example-app.group>
-        <example-app.uid>1.0.0</example-app.uid>
-        <example-app.guid>1.0.0</example-app.guid>
+        <application.version>1.0.0</application.version>
+        <application.user>simple</application.user>
+        <application.uid>1000</application.uid>
+        <application.group>simple</application.group>
+        <application.gid>1000</application.gid>
     </properties>
 
     <modules>
@@ -27,4 +27,27 @@
             <url>http://maven.apache.org</url>
         </repository>
     </distributionManagement>
+
+    <build>
+        <plugins>
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-antrun-plugin</artifactId>-->
+            <!--                <version>1.7</version>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <phase>validate</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>run</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            <tasks>-->
+            <!--                                <echoproperties/>-->
+            <!--                            </tasks>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
+        </plugins>
+    </build>
 </project>
