--- a/images/application/pom.xml
+++ b/images/application/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
@@ -11,7 +10,7 @@
     <parent>
         <artifactId>take-home.images</artifactId>
         <groupId>com.seemscloud.urban.take-home.images</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1000-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -36,7 +35,7 @@
             <!--                        </goals>-->
             <!--                        <configuration>-->
             <!--                            <tasks>-->
-            <!--                                <echoproperties/>-->
+            <!--                                <echoproperties />-->
             <!--                            </tasks>-->
             <!--                        </configuration>-->
             <!--                    </execution>-->
