--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
     <artifactId>take-home</artifactId>
     <groupId>com.seemscloud.urban.take-home</groupId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1000-SNAPSHOT</version>
 
     <properties>
         <application.version>1.0.0</application.version>
@@ -42,7 +41,7 @@
             <!--                        </goals>-->
             <!--                        <configuration>-->
             <!--                            <tasks>-->
-            <!--                                <echoproperties/>-->
+            <!--                                <echoproperties />-->
             <!--                            </tasks>-->
             <!--                        </configuration>-->
             <!--                    </execution>-->
