--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
@@ -7,6 +8,18 @@
     <artifactId>take-home</artifactId>
     <groupId>com.seemscloud.urban.take-home</groupId>
     <version>1000-SNAPSHOT</version>
+
+    <scm>
+        <connection>
+            scm:git:git@github.com:seemscloud-testdrive/urban-take-home-application.git
+        </connection>
+        <developerConnection>
+            scm:git:git@github.com:seemscloud-testdrive/urban-take-home-application.git
+        </developerConnection>
+        <url>
+            https://github.com/seemscloud-testdrive/urban-take-home-application
+        </url>
+    </scm>
 
     <properties>
         <application.version>1.0.0</application.version>
@@ -47,6 +60,15 @@
             <!--                    </execution>-->
             <!--                </executions>-->
             <!--            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-scm-plugin</artifactId>
+                <configuration>
+                    <connectionType>developerConnection</connectionType>
+                    <scmVersion>main</scmVersion>
+                    <scmVersionType>branch</scmVersionType>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
